landing and classroom polished

--- a/src/components/TopicInfo/ci47.md
+++ b/src/components/TopicInfo/ci47.md
@@ -1,5 +1,5 @@
 
-C.I. 47 - High Court Civil Procedure rules
+### C.I. 47 - High Court Civil Procedure rules
 
 The objectives of C.I. 47 are stipulated in **Order 1 Rule 2** and the rules are to be applied and interpreted to achieve the following:
 
